# soramimi-wordlists

./: README.md  baseball.csv  fictional_anime_character.csv  fictional_daily_anime_character.csv  fictional_scientist.csv  football.csv  nations.csv  physicist.csv  plant.csv  pokemon.csv  scientist.csv  sekitsui.csv  stations.csv  vtuber.csv  youtuber.csv
.github/workflows/: ci.yml  update-wordlists.yml
docs/adr/: 00001-auto-update-source-selection.md  00002-pokemon-forms-and-types.md  00003-nations-notation-and-status.md  00004-stations-auto-update.md  00005-people-lists-auto-update.md  00006-fictional-scientist-wordlist.md  00007-sekitsui-auto-update.md  00008-plant-wordlist.md  00008-stations-lines-column.md  00009-scientist-wordlist.md  00010-fictional-portrait-only-images.md  00011-youtuber-vtuber-wordlist.md  00012-merge-youtuber-vtuber.md  00013-stations-lines-column.md  README.md
tools/: enrich_images.py  enrich_lines.py  enrich_nation_flags.py  enrich_sekitsui_images.py  make_baseball_player_table.ipynb  make_diff_baseball_tidy.py  make_family_to_fullname_json.ipynb  nations_map.csv  pyproject.toml  update_baseball.py  update_football.py  update_nations.py  update_physicist.py  update_plant.py  update_pokemon.py  update_scientist.py  update_sekitsui.py  update_stations.py  update_vtuber.py  update_youtuber.py  validate_csvs.py  wpnames.py  yt_common.py
